static/css/publication.css
.citation {
  border-style: solid;
  border-width: thin;
  border-color: var(--inner-bg);
  border-radius: 15px;
  margin-top: 25px;
  margin-bottom: 25px;
}

.citation__body,
.citation__summary {
  padding-left: 10px;
  padding-right: 10px;
}

.citation__body {
  padding-top: 10px;
  overflow: hidden;
  display: flex;
  align-items: center;
}

.citation__summary {
  padding-bottom: 10px;
}

.full__citation {
  font-size: 12px;
  line-height: 1rem;
  padding-left: 35px;
  padding-right: 35px;
  padding-top: 10px;
  padding-bottom: 10px;
  background: var(--inner-bg);
  border-radius: 14px;
  overflow: hidden;
}

.citation__abbr {
  float: left;
  width: 60%;
  height: 100%;
  padding-right: 10px;
}

.citation_toc {
  width: 40%;
  height: 100%;
  float: right;
}

.toc__img {
  width: 100%;
  max-height: 100%;
  height: auto;
  object-fit: scale-up;
  display: block;
  margin: 0 auto;
  overflow: hidden;
}

.citation__abbr h2:before {
  content: "";
}

